--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,9 @@
         android:allowBackup="true"
         android:icon="@drawable/cubr"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:debuggable="true" >
+
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main" >
