Added Facebook sharing

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,9 @@
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id"/>
 
+        <provider android:authorities="com.facebook.app.FacebookContentProvider822977454434698"
+            android:name="com.facebook.FacebookContentProvider"
+            android:exported="true"/>
     </application>
 
     <uses-permission android:name="android.permission.INTERNET"/>
